commit model with tf-idf,word2vec

--- a/src/aifeel/model/custom_feature_extraction_model.ipynb
+++ b/src/aifeel/model/custom_feature_extraction_model.ipynb
@@ -102,8 +102,8 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.88      0.83      4003\n",
-      "           1       0.86      0.77      0.82      3997\n",
+      "           0       0.80      0.88      0.84      4003\n",
+      "           1       0.87      0.77      0.82      3997\n",
       "\n",
       "    accuracy                           0.83      8000\n",
       "   macro avg       0.83      0.83      0.83      8000\n",
@@ -113,19 +113,19 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.86      0.83      4003\n",
-      "           1       0.85      0.79      0.82      3997\n",
+      "           0       0.79      0.87      0.83      4003\n",
+      "           1       0.85      0.77      0.81      3997\n",
       "\n",
       "    accuracy                           0.82      8000\n",
-      "   macro avg       0.83      0.82      0.82      8000\n",
-      "weighted avg       0.83      0.82      0.82      8000\n",
+      "   macro avg       0.82      0.82      0.82      8000\n",
+      "weighted avg       0.82      0.82      0.82      8000\n",
       "\n",
       "Classification report for RandomForestClassifier:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.86      0.83      4003\n",
-      "           1       0.85      0.79      0.82      3997\n",
+      "           0       0.80      0.87      0.83      4003\n",
+      "           1       0.85      0.78      0.82      3997\n",
       "\n",
       "    accuracy                           0.82      8000\n",
       "   macro avg       0.83      0.82      0.82      8000\n",
@@ -148,6 +148,46 @@
     "    y_pred = model.predict(X_test)\n",
     "    print(f\"Classification report for {model.__class__.__name__}:\\n\")\n",
     "    print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted sentiment probabilities for LogisticRegression:\n",
+      "Negative: 0.8419932440194734\n",
+      "Positive: 0.15800675598052658\n",
+      "\n",
+      "Predicted sentiment probabilities for DecisionTreeClassifier:\n",
+      "Negative: 0.9315068493150684\n",
+      "Positive: 0.0684931506849315\n",
+      "\n",
+      "Predicted sentiment probabilities for RandomForestClassifier:\n",
+      "Negative: 0.9592241334011357\n",
+      "Positive: 0.04077586659886431\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_review = \"where are you now, i need you here\"\n",
+    "\n",
+    "clean_review = preprocess_text(new_review)\n",
+    "features = extract_features(clean_review, positive_words, negative_words)\n",
+    "\n",
+    "# Convert the features to a format that can be used by the models\n",
+    "X_new = vec.transform(features).toarray()\n",
+    "\n",
+    "for model in models_best_params:\n",
+    "    y_new_pred_proba = model.predict_proba(X_new)\n",
+    "    print(f\"Predicted sentiment probabilities for {model.__class__.__name__}:\")\n",
+    "    print(f\"Negative: {y_new_pred_proba[0][0]}\")\n",
+    "    print(f\"Positive: {y_new_pred_proba[0][1]}\\n\")\n"
    ]
   }
  ],
